--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
@@ -20,7 +20,7 @@ else if (!users.Any())
 else
 {
     <table class="table">
-        <thead>
+        <thead class="table-head">
         <tr>
             <th>Name</th>
             <th>Username</th>
@@ -29,7 +29,7 @@ else
         </thead>
         @foreach (var user in users)
         {
-            <tr>
+            <tr class="table-body">
                 <td>@user.Name</td>
                 <td>@user.UserName</td>
             <td>
@@ -39,30 +39,32 @@ else
     </table>
 }
 <div class="filter-bar">
-        <h3 class="create-head">Create</h3>
-        <div class="filters-container">
-            <img src="img/@(doShowFilters ? "clear_" : "")add.png" class="funnel" @onclick="@(() => doShowFilters = !doShowFilters)" alt="Funnel"/>
-            @if (doShowFilters)
-            {
-                <div class="form-group field">
-                    <label>Name:</label>
-                    <input type="text" rows="1" cols="15" @bind="name"/>
-                </div>
-                <div class="form-group field">
-                    <label>Username:</label>
-                    <input type="text" rows="1" cols="5" @bind="username"/>
-                </div>
-                <div class="form-group field">
-                    <label>Password:</label>
-                    <input type="text" rows="1" cols="5" @bind="password"/>
-                </div>
-                <div class="button-row">
+    <h3 class="create-head">Create</h3>
+    <div class="filters-container">
+        <img src="img/@(doShowFilters ? "clear_" : "")add.png" class="funnel" @onclick="@(() => doShowFilters = !doShowFilters)" alt="Funnel"/>
+        @if (doShowFilters)
+        {
+            <div class="form-group field">
+                <label>Name:</label>
+                <input type="text" rows="1" cols="15" @bind="name"/>
+            </div>
+            <div class="form-group field">
+                <label>Username:</label>
+                <input type="text" rows="1" cols="5" @bind="username"/>
+            </div>
+            <div class="form-group field">
+                <label>Password:</label>
+                <input type="text" rows="1" cols="5" @bind="password"/>
+            </div>
+            <div class="button-row">
                     
-                    <button @onclick="ConfirmActionCreate" class="acceptbtn">Create</button>
-                </div>
-            }
-        </div>
+                <button @onclick="ConfirmActionCreate" class="acceptbtn">Create</button>
+            </div>
+        }
     </div>
+</div>
+
+<p style="color: red;">@msg</p>
 
 @code {
     private IEnumerable<User>? users;
@@ -98,7 +100,7 @@ else
         catch (Exception e)
         {
             Console.WriteLine(e);
-            msg = "Error Creating Member";
+            msg = "Error Creating Member, Ensure the Username is unique";
         }
     }
     
