--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor.css
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor.css
@@ -1,16 +1,7 @@
-.deletebtn {
-    margin-left: 30px;
-    background-color: palevioletred;
-    width: 150px;
-    height: 40px;
-    font-size: small;
-    border-radius: 10px;
-}
-
-.createbtn {
+.acceptbtn {
     background-color: greenyellow;
-    width: 150px;
-    height: 50px;
+    width: 120px;
+    height: 35px;
     font-size: large;
     border-radius: 10px;
 }
@@ -18,6 +9,18 @@
     width:30px;
     height:30px;
     cursor: pointer;
+}
+.table{
+    border: 2px solid black;
+    border-radius: 3px;
+}
+
+.table-head{
+    background-color: #3cbb00;
+}
+
+.table-body{
+    background-color: #d5ffd2;
 }
 
 .head{
