--- a/GolfClub/BlazorApp/Pages/Score/AddScore.razor
+++ b/GolfClub/BlazorApp/Pages/Score/AddScore.razor
@@ -66,7 +66,8 @@
 
 @code {
     private string error = "";
-    private List<int> pars = new List<int>();
+    private static int[] parNumbers = { 3, 4, 2, 5, 3, 5, 7, 5, 6, 3, 3, 4, 5, 3, 5, 4, 6, 3 };
+    private List<int> pars = parNumbers.ToList();
     private List<int> scores = new List<int>(18);
     private int strokes;
     private string username = "";
@@ -108,9 +109,6 @@
             await JsRuntime.InvokeVoidAsync("alertAction", "ALERT: You currently do not have any started game to add a score to. " +
                                                            "\nTo start a game, please reach out to our employees.");
         
-        for (int i = 0; i < 18; i++)
-            pars.Add(random.Next(2, 8));
-
         scores = new List<int>(18);
         for (int i = 1; i <= 18; i++)
             scores.Add(0);
