--- a/GolfClub/BlazorApp/Pages/Score/ManageScores.razor.css
+++ b/GolfClub/BlazorApp/Pages/Score/ManageScores.razor.css
@@ -87,3 +87,11 @@ th {
     font-weight: bold;
     color: green;
 }
+
+.co_player {
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding: 5px;
+}
+
