--- a/GolfClub/BlazorApp/Pages/Score/ManageScore.razor.css
+++ b/GolfClub/BlazorApp/Pages/Score/ManageScore.razor.css
@@ -11,6 +11,12 @@ th {
     border: 1px solid black;
 }
 
+th:last-of-type {
+    border-top: 1px solid white;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
 table {
     border: 1px solid black;
 }
@@ -21,11 +27,12 @@ table {
 }
 
 .savebtn {
-    margin-left: 25px;
-    margin-top: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: darkorange;
-    width: 150px;
-    height: 50px;
+    width: 120px;
+    height: 40px;
     font-size: large;
     border-radius: 10px;
 }
